--- a/app/views/spree/shared/_nav_bar.html.erb
+++ b/app/views/spree/shared/_nav_bar.html.erb
@@ -1,5 +1,8 @@
 <nav id="top-nav-bar" class="columns ten">
   <ul id="nav-bar" class="inline" data-hook>
+	<% if !logged_in? %>
+	<li><%= link_to "Sign up", signup_path %></li>
+	<% end %>
     <li id="search-bar" data-hook>
 	<!-- Search form goes here. <li> used by devise_deface -->
 	<!-- render :partial => 'spree/shared/search'  -->
