--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -4,24 +4,24 @@
 	<section class="column four">
   		<h4>Coffee</h4>
 		<p><%= link_to "Coffee Subscription", '/store' %></p>
-		<p><%= link_to "Featured Coffee Roasters", '/coffee-roasters' %></p>
+		<p><%= link_to "Featured Coffee Roasters", '/store/coffee-roasters' %></p>
   	</section>
 	<section class="column four">
   		<h4>Tailors</h4>
-		<p><%= link_to "About us", '/about-us' %></p>
-		<p><%= link_to "Tips on coffee", '/coffee-tips' %></p>
-		<p><%= link_to "Blog", '/blog' %></p>
+		<p><%= link_to "About us", '/about_us' %></p>
+		<p><%= link_to "Tips on coffee", '/store/coffee-tips' %></p>
+		<p><%= link_to "Blog", '/store/blog' %></p>
   	</section>
 
   </div>
   <div id="footer-right" class="columns omega eight" data-hook>
   	<section class="column eight">
   		<h4>Support</h4>
-		  <p><%= link_to "FAQ", '/faq' %></p>
-		  <p><%= link_to "How it works", '/how-it-works' %></p>
-		  <p><%= link_to "Contact", '/contact-us' %></p>
-		  <p><%= link_to "Terms", '/terms-and-conditions' %></p>
-		  <p><%= link_to "Privacy", '/privacy' %></p>
+		  <p><%= link_to "FAQ", '/store/faq' %></p>
+		  <p><%= link_to "How it works", '/store/how-it-works' %></p>
+		  <p><%= link_to "Contact", '/store/contact-us' %></p>
+		  <p><%= link_to "Terms", '/store/terms-and-conditions' %></p>
+		  <p><%= link_to "Privacy", '/store/privacy' %></p>
   	</section>
 	<section class="column eight">
   		<h4>Spread the word</h4>
