--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -1,6 +1,8 @@
 <nav class="columns sixteen">
   <ul id="main-nav-bar" class="inline" data-hook>
 	<li id="home-link" data-hook><%= link_to t(:home), main_app.root_path %></li>
-    <li id="home-link" data-hook><%= link_to t('coffee subscription'), spree.root_path %></li>
+    <li data-hook><%= link_to t('coffee subscription'), spree.root_path %></li>
+    <li data-hook><%= link_to t('about us'), main_app.about_us_path %></li>
+    <li data-hook><%= link_to t('coffee education'), main_app.coffee_education_path %></li>
   </ul>
 </nav>
