Add Capistrano and deploy configs

--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -25,28 +25,28 @@
 
     <article class="columns four">
       <h4>We taste the coffee for you</h4>
-      <p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+      <p>Sit back and relax. We know how costly, difficult and time consuming it can be to find good coffee. So the coffee tailors come to save the day and do all the work for you.
       </p>
       <p style="text-align:center "><strong><a href="#">Read more</a></strong><br><%= image_tag 'coffee-tailors-cup.png'%></p>
     </article>
 
     <article class="columns four">
       <h4>The choice is always yours</h4>
-      <p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+      <p>We offer two different subscription plans, the “coffee noob” and “coffee lover”. In addition you can choose if you want 250g or 400g and your preferred grind.
       </p>
       <p style="text-align:center "><strong><a href="#">Read more</a></strong><br><%= image_tag 'coffee-tailors-cup.png'%></p>
     </article>
 
     <article class="columns four">
       <h4>Delivered to your doorstep for free</h4>
-      <p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+      <p>We want your coffee journey to be an easy ride; so, you only pay for what is in the description. The delivery is on us.
       </p>
       <p style="text-align:center "><strong><a href="#">Read more</a></strong><br><%= image_tag 'coffee-tailors-cup.png'%></p>
     </article>
 
     <article class="columns four">
-      <h4>Amazing coffee experience </h4>
-      <p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+      <h4>We promise to bring you an amazing coffee experience</h4>
+      <p>Our mission is to create an unique and simple experience for you. Hence, we deliver your selected subscription plan for free to wherever you are (in the UK).
       </p>
       <p style="text-align:center "><strong><a href="#">Read more</a></strong><br><%= image_tag 'coffee-tailors-cup.png'%></p>
     </article>
