--- a/app/views/welcome/coffee_education.html.erb
+++ b/app/views/welcome/coffee_education.html.erb
@@ -16,8 +16,9 @@
   </article>
 
   <article class="columns eight">
-    <h4>The choice is always yours</h4>
-    <p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+    <h4>Freshness is Key</h4>
+    <p>Have you ever wondered why coffee at Cafés taste so stale? Well, it has everything to do with the freshness of the bean. It is important to know, that the time of harvest is not the factor, but when it was roasted.</p>
+    <p>Once coffee gets in touch with air, the flavour molecules will start to deteriorate very quickly. In reality, it only takes 7-10 days for most of the taste to disappear. That is why we recommend you to keep your coffee in a vacuum container. In addition, keep that container in a cool, dark and dry place, but please NEVER put it into refrigerator as it will absorb all kind of strange odors and your coffee will never taste the same again. Lastly, if you use beans, we recommend you only grind only as much coffee as you plan to use.
     </p>
   </article>
 
@@ -30,13 +31,19 @@
     </article>
 
     <article class="columns eight">
-      <h4>The choice is always yours</h4>
-      <p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+      <h4>Grinding Tips</h4>
+      <p>Depending on your brewing method, you have to grind your coffee accordingly, as the coarseness determines how fast the water passes through. <strong>There are three main grinds:</strong>
+
+      <br>1. Coarse (Has distinct particles of coffee), - mainly used for ‘French Press Pot’ and ‘Cupping’
+      <br>2. Medium (More like coarse sand)- used for ‘Drip pots’
+      <br>3. Fine (Smooth, close to table salt and granulated sugar, BUT a little finer)- For ‘Espresso’, ‘Aeropress’
       </p>
+      <p>Now getting back to grinding, we would recommend you to use a good quality burr grinder as they generate very little heat and grind consistently. Blend type grinders are not efficient and will just burn your coffee, which in fact will destroy your cup of coffee. </p>
+      <p>Don’t leave any coffee in the grinder as it will get stale and harm your new fresh beans when mixed.</p>
     </article>
   </fieldset>
 </section>
-
+79.170.40.2
 <section class="container">
   <fieldset class="what-they-say-about-us" id="why-chose-us">
     <article class="columns eight">
@@ -44,9 +51,21 @@
     </article>
 
     <article class="columns eight">
-      <h4>The choice is always yours</h4>
-      <p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
-      </p>
+      <h4>Brewing Tips</h4>
+      <p>As we offer five different kinds of grinds in our boxes, we would currently like to focus only on the brewing methods that can be used with them (and perhaps add more later, if there is the need)</p>
+      <p><strong>Cafetiere</strong><br>
+        <em>&mdash; What you need: Press Pot, coffee, a spoon, a timer, cups and a grinder for your fresh beans.</em>
+        <br>1. Firstly it is important that the coffee you use is ground coarse. It allows slower and more even extraction, which will give your cup of coffee a fuller body.
+        <br>2. Add freshly grinded coffee to your pot. You will need approximately one tablespoon (7g) for every 115ml of water. This can of course vary depending on personal preferences, but we would recommend 1 spoon for one cup.
+
+      <br><strong>Drip</strong>
+        &mdash; What you need: <em>Any drip pot( Hario V60, Chemex, etc), filter for your pot, coffee, grinder for your fresh beans and your favourite mug.</em>
+      <br><strong>Moka Pot</strong>
+        &mdash; What you need: Moka Pot, kettle, coffee, awesome burr grinder, heat source(stove), a towel, and don’t forget your favourite mug.
+      <br><strong>Aero Press</strong>
+        &mdash; What you need: Aeropress brewer, aeropress filter, coffee, grinder, timer, and a mug.-
+      <br><strong>Espresso</strong>
+        &mdash; What you need: Espresso machine, high quality burr grinder, and freshest coffee you can find (preferably from Coffee Tailor).</p>
     </article>
   </fieldset>
 </section>
