fixing heroku paperclip upload settings

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -95,7 +95,7 @@
 
 	</fieldset>
 
-	<fieldset class="what-they-say-about-us" class="">
+<!-- 	<fieldset class="what-they-say-about-us" class="">
 		<legend align="center"><span title="Featured coffee roasters">PARTNER WITH US!</span></legend>
 
 		<article class="columns four">
@@ -122,5 +122,5 @@
 			<p><strong><em>&mdash; Miss Shook Liu</em></strong></p>
 		</article>
 
-	</fieldset>
+	</fieldset> -->
 </section>
