some changes to the app

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row" id="coffee-slider">
 	<section class="container">
 		<span>.</span>
-		<%= link_to image_tag( "coffee-tailors-slider.png", alt: "sliding coffee", width: "100%"), '#', title: 'Where will your coffee take you' %>
+		<%= link_to image_tag( "coffee-tailors-slider.png", alt: "sliding coffee", width: "100%"), '/how-it-works', title: 'Where will your coffee take you' %>
 		<span>.</span>
 	</section>
 	<style>
