--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -45,7 +45,7 @@
     </article>
 
     <article class="columns four">
-      <h4>We promise to bring you an amazing coffee experience</h4>
+      <h4>We promise you an amazing coffee experience</h4>
       <p>Our mission is to create an unique and simple experience for you. Hence, we deliver your selected subscription plan for free to wherever you are (in the UK).
       </p>
       <p style="text-align:center "><strong><a href="#">Read more</a></strong><br><%= image_tag 'coffee-tailors-cup.png'%></p>
