git-version for rvm, add new front end text

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,10 +38,10 @@
 <div class="container">
 	<article class="columns eight" id="blog-feed">
 		<div class="feed">
-			<h1 title="Blog feed">BLOG</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ..Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+			<h1 title="Blog feed">LAUNCHING</h1>
+			<p>This is it! We are finally launching Coffee Tailor (hallelujah). It has not been the easiest task building Coffee Tailor, especially the website; blood, sweat and tears were shed to make this moment so special.</p>
 			<p style="text-align:center;"> <% 3.times { %><%= image_tag 'coffee-tailors-cup.png'%> <% } %> </p>
-			<p style="text-align:center;"><%= link_to image_tag('coffee-tailors-readmore.png'), '#' %> </p>
+			<p style="text-align:center;"><%= link_to image_tag('coffee-tailors-readmore.png'), '#blog' %> </p>
 		</div>
 	</article>
 
@@ -70,57 +70,27 @@
 		<legend align="center"><span title="Featured coffee roasters">WHAT THEY SAY ABOUT US!</span></legend>
 
 		<article class="columns four">
-			<p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+			<p>I really love this company. First of all, the brand is so classy and sophisticated! I love the name--it gives it such an individual, personal feel, which I think your subscribers will really appreciate. <a href="/store/testimonials#adrienne">read on..</a>
 			</p>
-			<p><strong><em>&mdash; Miss Shook Liu</em></strong></p>
+			<p><strong><em>&mdash; Adrienne Warrer</em></strong></p>
 		</article>
 
 		<article class="columns four">
-			<p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+			<p>I like your page. I like coffee. I bought this machine for making espresso at home. Nice roast coffee. :)
 			</p>
-			<p><strong><em>&mdash; Miss Shook Liu</em></strong></p>
+			<p><strong><em>&mdash; Adéla Fučíková</em></strong></p>
 		</article>
 
 		<article class="columns four">
-			<p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+			<p>Coffee Tailors offer customers a monthly coffee subscription, with premium coffees from UK roasters delivered to their door each month... <a href="/store/testimonials#sean">read on..</a>
 			</p>
-			<p><strong><em>&mdash; Miss Shook Liu</em></strong></p>
+			<p><strong><em>&mdash; Sean Afnan Morrissey</em></strong></p>
 		</article>
 
 		<article class="columns four">
-			<p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
+			<p>It’s great to be able to buy best tasting coffee online, and have it delivered monthly to your door at home. Saves me the time and money, and gives me great mornings each and every day. My coffee is very important to me!
 			</p>
-			<p><strong><em>&mdash; Miss Shook Liu</em></strong></p>
+			<p><strong><em>&mdash; Kertu Kelem</em></strong></p>
 		</article>
-
 	</fieldset>
-
-<!-- 	<fieldset class="what-they-say-about-us" class="">
-		<legend align="center"><span title="Featured coffee roasters">PARTNER WITH US!</span></legend>
-
-		<article class="columns four">
-			<p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
-			</p>
-			<p><strong><em>&mdash; Miss Shook Liu</em></strong></p>
-		</article>
-
-		<article class="columns four">
-			<p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
-			</p>
-			<p><strong><em>&mdash; Miss Shook Liu</em></strong></p>
-		</article>
-
-		<article class="columns four">
-			<p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
-			</p>
-			<p><strong><em>&mdash; Miss Shook Liu</em></strong></p>
-		</article>
-
-		<article class="columns four">
-			<p>The quality of your materials is excellent, from a customer service point of view this has been fantastic throughout! The help and advice you gave me great and i will have no hesitation.
-			</p>
-			<p><strong><em>&mdash; Miss Shook Liu</em></strong></p>
-		</article>
-
-	</fieldset> -->
 </section>
