--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -9,19 +9,19 @@
 <% end %>
 
 <% if products.any? %>
-<ul id="products" class="inline product-listing" data-hook>
+<div id="products" class="inline product-listing" data-hook>
   <% products.each do |product| %>
-    <li id="product_<%= product.id %>" class="columns  six <%= cycle("alpha", "secondary", "", "omega secondary", :name => "classes") %>" data-hook="products_list_item" itemscope itemtype="http://schema.org/Product">
-	
+    <div id="product_<%= product.id %>" class="columns  six <%= cycle("alpha", "secondary", "", "omega secondary", :name => "classes") %>" data-hook="products_list_item" itemscope itemtype="http://schema.org/Product">
+
       <h2 class="product-title"><%= link_to truncate(product.name, :length => 50), product, :class => '', :itemprop => "name", :title => product.name %></h2>
 	<div class="product-image">
         <%= link_to large_image(product, :itemprop => "image"), product, :itemprop => 'url' %>
       </div>
       <span class="price selling" itemprop="price"><%= product.price_in(current_currency).display_price %></span>
-    </li>
+    </div>
   <% end %>
   <% reset_cycle("classes") %>
-</ul>
+</div>
 <% end %>
 
 <% if paginated_products.respond_to?(:num_pages) %>
