change product view image

--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -11,7 +11,7 @@
 <% if products.any? %>
 <div id="products" class="inline product-listing" data-hook>
   <% products.each do |product| %>
-    <div id="product_<%= product.id %>" class="columns  six <%= cycle("alpha", "secondary", "", "omega secondary", :name => "classes") %>" data-hook="products_list_item" itemscope itemtype="http://schema.org/Product">
+    <div id="product_<%= product.id %>" class="columns <%= cycle("alpha", "secondary", "", "omega secondary", :name => "classes") %>" data-hook="products_list_item" itemscope itemtype="http://schema.org/Product">
 
       <!-- <h2 class="product-title"><%= link_to truncate(product.name, :length => 50), product, :class => '', :itemprop => "name", :title => product.name %></h2> -->
 	<div class="product-image">
