prepare to launch

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -70,7 +70,7 @@
 		<legend align="center"><span title="Featured coffee roasters">WHAT THEY SAY ABOUT US!</span></legend>
 
 		<article class="columns four">
-			<p>I really love this company. First of all, the brand is so classy and sophisticated! I love the name--it gives it such an individual, personal feel, which I think your subscribers will really appreciate. <a href="/store/testimonials#adrienne">read on..</a>
+			<p>I really love this company. First of all, the brand is so classy and sophisticated! I love the name--it gives... <a href="/store/testimonials#adrienne"> read on..</a>
 			</p>
 			<p><strong><em>&mdash; Adrienne Warrer</em></strong></p>
 		</article>
@@ -82,13 +82,13 @@
 		</article>
 
 		<article class="columns four">
-			<p>Coffee Tailors offer customers a monthly coffee subscription, with premium coffees from UK roasters delivered to their door each month... <a href="/store/testimonials#sean">read on..</a>
+			<p>Coffee Tailors offer customers a monthly coffee subscription, with premium coffees from UK roasters delivered... <a href="/store/testimonials#sean"> read on..</a>
 			</p>
 			<p><strong><em>&mdash; Sean Afnan Morrissey</em></strong></p>
 		</article>
 
 		<article class="columns four">
-			<p>It’s great to be able to buy best tasting coffee online, and have it delivered monthly to your door at home. Saves me the time and money, and gives me great mornings each and every day. My coffee is very important to me!
+			<p>It’s great to be able to buy best tasting coffee online, and have it delivered monthly to your door at home...<a href="/store/testimonials#kertu"> read on..</a>
 			</p>
 			<p><strong><em>&mdash; Kertu Kelem</em></strong></p>
 		</article>
