Remove the product title

--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -6,14 +6,14 @@
 
       <div id="product-description" data-hook="product_description">
 
-        <h1 class="product-title" itemprop="name"><%= accurate_title %></h1>
-		
+        <!-- <h1 class="product-title" itemprop="name"><%= accurate_title %></h1> -->
+
 		<div id="product-images" data-hook="product_images">
 	        <div id="main-image" data-hook>
 	          <%= render :partial => 'image' %>
 	        </div>
 		</div>
-	
+
         <!-- <div itemprop="description" data-hook="description">
                   <%= product_description(@product) rescue t(:product_has_no_description) %>
                 </div> -->
