Fix facebook links

--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -33,7 +33,7 @@
   	</section>
 	<section class="column eight">
   		<h4>Spread the word</h4>
-		<p><%= link_to "Like us on Facebook", 'http://www.facebook.com/coffee.tailors' %></p>
+		<p><%= link_to "Like us on Facebook", 'http://www.facebook.com/coffee.tailor' %></p>
 		<p><%= link_to "Follow us on Twitter", 'http://www.twitter.com/coffeetailors' %></p>
 		<p><%= link_to "Follow us on Instagram", 'http://www.instagram.com/coffeetailors' %></p>
     <p><%= t :designed_by  %> <%= link_to 'Safarista Design', 'http://safarista.com' %></p>
