--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -56,7 +56,7 @@
 				<%= link_to image_tag("instagram.png", alt: "Coffee Tailors Instagram Profile", size: "30px", class: "social-media-icon"), "https://instagram.com/coffee_tailor", title: 'Coffee Tailors Instagram Profile' %>
 				<%= link_to image_tag("googleplus.png", alt: "Coffee Tailors Google Plus Profile", size: "30px", class: "social-media-icon"), 'https://plus.google.com/', title: 'coffee tailors Google Plus profile' %>
 				<%= link_to image_tag("twitter.png", alt: "Coffee Tailors Twitter Profile", size: "30px", class: "social-media-icon"), 'https://twitter.com/coffee_tailor', title: 'coffee tailors instagram profile' %>
-				<%= link_to image_tag("facebook.png", alt: "Coffee Tailors Facebook Profile", size: "30px", class: "social-media-icon"), 'https://facebook.com/coffee_tailor', title: 'coffee Facebook instagram profile' %>
+				<%= link_to image_tag("facebook.png", alt: "Coffee Tailors Facebook Profile", size: "30px", class: "social-media-icon"), 'https://facebook.com/coffee.tailor', title: 'coffee Facebook instagram profile' %>
 				<%= link_to image_tag("youtube.png", alt: "Coffee Tailors YouTube Profile", size: "30px", class: "social-media-icon"), 'https://youtube.com/coffee_tailor', title: 'coffee tailors YouTube profile' %>
 			</span>
 		</p>
