Trying to restart the server at heroku

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -72,7 +72,7 @@
 		<article class="columns four">
 			<p>I really love this company. First of all, the brand is so classy and sophisticated! I love the name--it gives... <a href="/store/testimonials#adrienne"> read on..</a>
 			</p>
-			<p><strong><em>&mdash; Adrienne Warrer</em></strong></p>
+			<p><strong><em>&ndash; Adrienne Warrer</em></strong></p>
 		</article>
 
 		<article class="columns four">
